Counter report with ID; /esuage-reports/title-data
